--- a/src/Elements/Card/card.scss
+++ b/src/Elements/Card/card.scss
@@ -2,5 +2,8 @@
   max-width: 472px;
   max-height: 246px;
   margin: auto;
-  border: 1px solid black;
+  border-radius: 20px;
+  box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.16);
+
+  background: #f6f5fa;
 }
