--- a/src/Elements/Card/card.scss
+++ b/src/Elements/Card/card.scss
@@ -1,11 +1,16 @@
 .cardWrapper {
   max-width: 472px;
   max-height: 246px;
+  height: 100%;
   margin: 0 auto 3rem;
   border-radius: 20px;
   box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.16);
 
   background: #f6f5fa;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 @media (max-width: 600px) {
