--- a/src/Components/ErrorNotice/errorNotice.scss
+++ b/src/Components/ErrorNotice/errorNotice.scss
@@ -34,3 +34,13 @@
     background-color: transparent;
   }
 }
+
+@media (max-width: 600px) {
+  .errorWrapper {
+    flex-direction: column;
+  }
+
+  .errorCode {
+    line-height: 100%;
+  }
+}
